--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -36,7 +36,7 @@ const features = [
 ---
 
 <!-- ====== Features Section Start -->
-<section class="pb-8 pt-20 dark:bg-dark lg:pb-[70px] lg:pt-[120px]">
+<section id="features" class="pb-8 pt-20 dark:bg-dark lg:pb-[70px] lg:pt-[120px]">
   <div class="container">
     <div class="-mx-4 flex flex-wrap">
       <div class="w-full px-4">
