--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -27,13 +27,13 @@ const testimonials = [
 ];
 ---
 
-<section id="testimonials" class="overflow-hidden bg-gray-1 py-20 dark:bg-slate-400 md:py-[120px]">
+<section id="testimonials" class="overflow-hidden bg-gray-1 py-20 dark:bg-gray-700 md:py-[120px]">
   <div class="container px-4">
     <div class="-mx-4 flex flex-wrap justify-center">
       <div class="w-full px-4">
         <div class="mx-auto mb-[60px] max-w-[485px] text-center">
           <span
-            class="mb-2 block text-lg font-semibold text-primary"
+            class="mb-2 block text-lg font-semibold text-[#E8751A]"
             style="font-family: 'Oxanium';"
           >
             Testimonios</span
