--- a/src/components/layout/BackToTop.astro
+++ b/src/components/layout/BackToTop.astro
@@ -1,7 +1,7 @@
 <!-- ====== Back To Top Start -->
 <a
   href="javascript:void(0)"
-  class="back-to-top fixed bottom-8 right-8 left-auto z-[999] hidden h-10 w-10 items-center justify-center rounded-md bg-primary text-white shadow-md transition duration-300 ease-in-out hover:bg-dark"
+  class="back-to-top fixed bottom-8 right-8 left-auto z-[999] hidden h-10 w-10 items-center justify-center rounded-md bg-[#E8751A] text-white shadow-md transition duration-300 ease-in-out hover:bg-dark"
 >
   <span
     class="mt-[6px] h-3 w-3 rotate-45 border-t border-l border-white"
