--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -56,7 +56,7 @@ const footerLinks = [
 ---
 
 <!-- ====== Footer Section Start -->
-<footer class="wow fadeInUp relative z-10 bg-[#090E34] pt-20 lg:pt-[100px]" data-wow-delay=".15s">
+<footer class="wow fadeInUp relative z-10 bg-blue-900 pt-20 lg:pt-[100px]" data-wow-delay=".15s">
   <div class="container">
     <div class="-mx-4 flex flex-wrap">
       <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-4/12 xl:w-3/12">
