--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,6 +56,7 @@ const { description, title, image } = Astro.props;
       }
       html {
         scroll-behavior: smooth;
+        box-sizing: border-box content-box;
       }
       #map {
         height: 300px;
