--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -47,21 +47,21 @@ const menuitems = [
 <header class="ud-header absolute left-0 top-0 z-40 flex w-full items-center bg-transparent">
   <div class="container">
     <div
-      class="subheader to-transparentp-3 relative flex justify-between bg-gradient-to-r from-transparent via-blue-950 p-2"
+      class="subheader to-transparentp-3 relative flex justify-between bg-gradient-to-r from-transparent via-blue-950 p-2 "
     >
       <div class="justify-start">
         <a
           href="mailto:mecanicaflopach@gmail.com"
-          class="flex pl-2 text-sm text-gray-7 hover:text-white"
+          class="flex pl-2 text-sm text-gray-7 hover:text-white "
           target="_blank"
         >
-          <svg width="34" height="25" viewBox="0 0 34 25" class="mr-2 w-6 fill-current">
+          <svg width="34" height="25" viewBox="0 0 34 25" class="mr-2 w-5 fill-current">
             <path
               d="M30.5156 0.960938H3.17188C1.42188 0.960938 0 2.38281 0 4.13281V20.9219C0 22.6719 1.42188 24.0938 3.17188 24.0938H30.5156C32.2656 24.0938 33.6875 22.6719 33.6875 20.9219V4.13281C33.6875 2.38281 32.2656 0.960938 30.5156 0.960938ZM30.5156 2.875C30.7891 2.875 31.0078 2.92969 31.2266 3.09375L17.6094 11.3516C17.1172 11.625 16.5703 11.625 16.0781 11.3516L2.46094 3.09375C2.67969 2.98438 2.89844 2.875 3.17188 2.875H30.5156ZM30.5156 22.125H3.17188C2.51562 22.125 1.91406 21.5781 1.91406 20.8672V5.00781L15.0391 12.9922C15.5859 13.3203 16.1875 13.4844 16.7891 13.4844C17.3906 13.4844 17.9922 13.3203 18.5391 12.9922L31.6641 5.00781V20.8672C31.7734 21.5781 31.1719 22.125 30.5156 22.125Z"
             ></path>
           </svg>
-           mecanicaflopach@gmail.com</a
-        >
+          <span class="xs:hidden xl:block lg:block md:block">mecanicaflopach@gmail.com</span> 
+          </a>
       </div>
       <div class="flex justify-end">
         <a
@@ -75,7 +75,7 @@ const menuitems = [
             viewBox="0 0 20 20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
-            class="w-5 fill-current"
+            class="w-4 fill-current"
           >
             <path
               d="M16.294 8.86875H14.369H13.6815V8.18125V6.05V5.3625H14.369H15.8128C16.1909 5.3625 16.5003 5.0875 16.5003 4.675V1.03125C16.5003 0.653125 16.2253 0.34375 15.8128 0.34375H13.3034C10.5878 0.34375 8.69714 2.26875 8.69714 5.12187V8.1125V8.8H8.00964H5.67214C5.19089 8.8 4.74402 9.17812 4.74402 9.72812V12.2031C4.74402 12.6844 5.12214 13.1313 5.67214 13.1313H7.94089H8.62839V13.8188V20.7281C8.62839 21.2094 9.00652 21.6562 9.55652 21.6562H12.7878C12.994 21.6562 13.1659 21.5531 13.3034 21.4156C13.4409 21.2781 13.544 21.0375 13.544 20.8312V13.8531V13.1656H14.2659H15.8128C16.2596 13.1656 16.6034 12.8906 16.6721 12.4781V12.4438V12.4094L17.1534 10.0375C17.1878 9.79688 17.1534 9.52187 16.9471 9.24687C16.8784 9.075 16.569 8.90312 16.294 8.86875Z"
