--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -34,7 +34,7 @@
             <li>
               <a
                 href="#contact"
-                class="flex items-end gap-4 rounded-md bg-white/[0.12] px-6 py-[14px] text-base font-medium text-white transition duration-300 ease-in-out hover:bg-[#E8751A] hover:text-white"
+                class="flex items-end gap-4 rounded-md bg-white/[0.12] px-6 py-[14px] text-base font-medium text-white transition duration-300 ease-in-out hover:bg-blue-900 hover:text-white"
               >
                 Obtener una cita
 
