--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -11,7 +11,7 @@ const teams = [
     image: '/assets/services/service5.jpg',
   },
   {
-    name: 'Planchado y pintura',
+    name: 'Planchado y Pintado',
     description: '',
     image: '/assets/services/service1.jpg',
   },
