--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -56,16 +56,15 @@ const footerLinks = [
 ---
 
 <!-- ====== Footer Section Start -->
-<footer class="wow fadeInUp relative z-10 bg-blue-900 pt-20 lg:pt-[100px]" data-wow-delay=".15s">
+<footer class="wow fadeInUp relative z-10 bg-blue-900 pt-10 lg:pt-[45px]" data-wow-delay=".15s">
   <div class="container">
     <div class="-mx-4 flex flex-wrap">
-      <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-4/12 xl:w-3/12">
-        <div class="mb-10 w-full">
-          <a href="/" class="mb-6 inline-block max-w-[160px]">
-            <img src="/assets/logo/flopach-white.png" alt="logo" class="max-w-full" />
+      <div class="w-full px-4">
+        <div class="mb-5 flex w-full justify-between px-12">
+          <a href="/" class="mb-6 inline-flex w-14 justify-start">
+            <img src="/assets/logo/logo.png" alt="logo" class="max-w-full" />
           </a>
-          <p class="mb-8 max-w-[270px] text-base text-gray-7"></p>
-          <div class="-mx-3 flex items-center">
+          <div class="-mx-3 flex justify-end">
             <a
               href="https://www.facebook.com/mecanicaautomotrizflopach/"
               class="px-3 text-gray-7 hover:text-white"
