--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -135,6 +135,7 @@ const { description, title, image } = Astro.props;
       import '../scripts/scrollmenu.js';
       import '../scripts/testimonial.js';
       import '../scripts/map.js';
+      import '../scripts/sendEmail.js';
     </script>
   </body>
 </html>
